# HRApp

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: token_service.rs
backend/src/cache/: cache_service.rs  redis_client.rs
frontend/: package-lock.json
